[ai] add test getUser